// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should change page 1`] = `
<ul
  className="pagination pull-right"
>
  <PageItem
    disabled={false}
    key="process_list_pag_prev_1"
    onChangePage={[Function]}
    page={1}
    type="prev"
  />
  <PageItem
    highlighted={false}
    key="process_list_pag_1"
    onChangePage={[Function]}
    page={1}
  />
  <PageItem
    highlighted={true}
    key="process_list_pag_active_2"
    onChangePage={[Function]}
    page={2}
  />
  <PageItem
    key="process_list_pag_plus_3"
    onChangePage={[Function]}
    page={3}
  />
  <li
    className="dropdown page-item"
    key="process_list_pag_4"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="4"
        key="process_list_pag_sublist_4"
      >
        <PageLink
          key="process_list_pag_sublist_item_4"
          onChangePage={[Function]}
          page={4}
        />
        <PageLink
          key="process_list_pag_sublist_item_5"
          onChangePage={[Function]}
          page={5}
        />
        <PageLink
          key="process_list_pag_sublist_item_6"
          onChangePage={[Function]}
          page={6}
        />
        <PageLink
          key="process_list_pag_sublist_item_7"
          onChangePage={[Function]}
          page={7}
        />
        <PageLink
          key="process_list_pag_sublist_item_8"
          onChangePage={[Function]}
          page={8}
        />
        <PageLink
          key="process_list_pag_sublist_item_9"
          onChangePage={[Function]}
          page={9}
        />
      </ul>
    </div>
  </li>
  <PageItem
    highlighted={false}
    key="process_list_pag_last_10"
    onChangePage={[Function]}
    page={10}
  />
  <PageItem
    disabled={false}
    key="process_list_pag_next_3"
    onChangePage={[Function]}
    page={3}
    type="next"
  />
</ul>
`;

exports[`Should render component 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#-1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#0"
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#6"
          >
            <span
              className="sr-only"
            />
            6
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#7"
          >
            <span
              className="sr-only"
            />
            7
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#8"
          >
            <span
              className="sr-only"
            />
            8
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#9"
          >
            <span
              className="sr-only"
            />
            9
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#10"
    >
      10
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 1 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#0"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#2"
    >
      2
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#3"
    >
      3
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="4"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#6"
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#2"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 2 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#-1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#0"
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#6"
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 3 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#-1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#0"
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#6"
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 4 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#-1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#0"
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#6"
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 5 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#-1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#0"
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#1"
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="#6"
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      data-senna-off={true}
      href="#1"
      role="button"
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;
